--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,7 +52,6 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\ARcamera.cs" />
-     <Compile Include="Assets\Scripts\AsyncSceneLoader.cs" />
      <Compile Include="Assets\Scripts\CameraSettings.cs" />
      <Compile Include="Assets\Scripts\DefaultTrackableEventHandler.cs" />
      <Compile Include="Assets\Scripts\DrawLines.cs" />
@@ -66,9 +65,10 @@
      <Compile Include="Assets\Scripts\OptionsConfig.cs" />
      <Compile Include="Assets\Scripts\QualityDialog.cs" />
      <Compile Include="Assets\Scripts\SamplesLoadingScreen.cs" />
-     <Compile Include="Assets\Scripts\SamplesMainMenu.cs" />
-     <Compile Include="Assets\Scripts\SamplesNavigationHandler.cs" />
      <Compile Include="Assets\Scripts\SamplesTapHandler.cs" />
+     <Compile Include="Assets\Scripts\Scene1\AsyncSceneLoader.cs" />
+     <Compile Include="Assets\Scripts\Scene2\SamplesMainMenu.cs" />
+     <Compile Include="Assets\Scripts\Scene2\SamplesNavigationHandler.cs" />
      <Compile Include="Assets\Scripts\SharingResult.cs" />
      <Compile Include="Assets\Scripts\TapHandler.cs" />
      <Compile Include="Assets\Scripts\TrackableSettings.cs" />
