--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,16 +52,15 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\GlowLines\MKGlowFree\MKGlowFree.cs" />
-     <Compile Include="Assets\Scripts\SamplesNavigationHandler.cs" />
-     <Compile Include="Assets\Scripts\Scene1\AsyncSceneLoader.cs" />
-     <Compile Include="Assets\Scripts\Scene2\SamplesMainMenu.cs" />
-     <Compile Include="Assets\Scripts\Scene3\SamplesLoadingScreen.cs" />
+     <Compile Include="Assets\Scripts\Scene1\SceneLoader.cs" />
+     <Compile Include="Assets\Scripts\Scene2\Menu.cs" />
+     <Compile Include="Assets\Scripts\Scene3\LoadingScreen.cs" />
      <Compile Include="Assets\Scripts\Scene4\ARcamera.cs" />
      <Compile Include="Assets\Scripts\Scene4\DrawLines.cs" />
+     <Compile Include="Assets\Scripts\Scene4\EscapeButton.cs" />
      <Compile Include="Assets\Scripts\Scene4\FrameQualityMeter.cs" />
-     <Compile Include="Assets\Scripts\Scene4\QualityDialog.cs" />
-     <Compile Include="Assets\Scripts\Scene4\SharingResult.cs" />
      <Compile Include="Assets\Scripts\UserDefinedTarget\DefaultTrackableEventHandler.cs" />
+     <Compile Include="Assets\Scripts\UserDefinedTarget\QualityDialog.cs" />
      <Compile Include="Assets\Scripts\UserDefinedTarget\UDTEventHandler.cs" />
      <Compile Include="Assets\Vuforia\Scripts\DefaultInitializationErrorHandler.cs" />
      <None Include="Assets\Vuforia\Shaders\ColoredLines.shader" />
